# tokenscope-desktop-public

./: .gitignore  CHANGELOG.md  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: README.md
scripts/: build-release.ps1  check-format-changed.mjs  create-latest-json.ps1  publish-release.ps1
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  pricing_presets.json  tauri.conf.json
src-tauri/capabilities/: default.json  token-pulse.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial_schema.sql  0002_agent_import_map.sql  0003_app_setting.sql  0004_custom_importer_profiles.sql  0005_external_datasets.sql  0006_cost_currency.sql  0007_github_sync.sql  0008_github_sync_blob_sha.sql  0009_github_sync_aggregate_v3.sql
src-tauri/sql/: agent_source_stats.sql  daily_usage_series_total.sql  dashboard_summary.sql  recent_calls.sql  seed_demo.sql  top_agents.sql  top_models.sql  top_projects.sql  top_providers.sql  top_sessions.sql  top_workflows.sql
src-tauri/src/: background_sync.rs  device_packages.rs  lib.rs  main.rs  quiet_mode.rs  telemetry.rs  tray_status.rs
src-tauri/src/commands/: dashboard.rs  mod.rs  settings.rs  validation.rs
src-tauri/src/db/: mod.rs  models.rs  repository.rs
src-tauri/src/db/repository/: github_sync.rs
src-tauri/src/github_sync/: crypto.rs  engine.rs  github.rs  mod.rs  packages.rs
src-tauri/src/importers/: claude_code.rs  codex.rs  custom_sqlite.rs  hermes.rs  mod.rs  opencode.rs
src-tauri/src/pricing/: mod.rs
src-tauri/src/proxy/: mod.rs
src-tauri/src/security/: mod.rs
src-tauri/src/usage/: mod.rs
src/app/: App.tsx
src/components/: AgentSourcesPanel.tsx  CallsPage.tsx  CustomImportersPanel.tsx  DataHealthPage.tsx  DeviceDatasetsPanel.tsx  DimensionDetailPage.tsx  DimensionIndexPage.tsx  GitHubSyncPanel.tsx  MiniSeriesChart.tsx  RecentCallsTable.tsx  ReportsPage.tsx  SettingsPage.tsx  SummaryCards.tsx  ToastNotice.tsx  TokenPulseWindow.tsx  TopList.tsx
src/components/tokenPulse/: CodexUsageLimitsPanel.tsx  Icons.tsx  Rings.tsx  hooks.ts  viewModel.ts
src/hooks/: useQuietMode.ts
src/i18n/: index.tsx
src/preferences/: display.tsx
src/services/: appUpdateState.ts  dashboard.ts
src/styles/: github-sync.css  token-pulse.css
src/types/: dashboard.ts
src/utils/: date.ts  format.ts
tests/: app-update-state.test.mjs  format.test.mjs  product-scope.test.mjs  repository.test.mjs
