[package]
name = "tokenscope-desktop"
version = "0.1.6"
description = "Local-first LLM token usage dashboard"
authors = ["TokenScope"]
edition = "2021"
license = "MIT"

[lib]
name = "tokenscope_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["chrono", "macros", "migrate", "runtime-tokio-rustls", "sqlite", "uuid"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["serde", "v4"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
